Base conversions is functional Still needs some work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   	<body>
 		<div name="top" class="topnav" id="topNav">
 			<div class="topCenter">
-				<a id="home" href="{{ site.baseurl }}/index">BASES</a>
+				<a id="home" href="{{ site.baseurl }}/index">HOME</a>
 				<a id="exponant" href="{{ site.baseurl }}/exponant">EXPONANTS</a>
 				<a id="info" href="{{ site.baseurl }}/info">INFO</a>
 				<a id="projects" href="{{ site.baseurl }}/projects">PROJECTS</a>
