--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 	<head>
     	<meta charset="utf-8">
 		<title>Binary Conversions</title>
-		<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
+		<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/default.css">
