--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 				<a id="home" href="{{ site.baseurl }}/index">HOME</a>
 				<a id="exponant" href="{{ site.baseurl }}/exponant">EXPONANTS</a>
 				<a id="info" href="{{ site.baseurl }}/info">INFO</a>
-				<a id="projects" href="{{ site.baseurl }}/projects">PROJECTS</a>
+				<a id="projects" href="http://projects.multarix.com">PROJECTS</a>
 				<a href="javascript:void(0);" class="icon" onclick="topNavMobile()">
 					<i class="fa fa-bars"></i>
 				</a>
